public static class Constants
{
    public class Hotkey
    {
        public const string Jump = "Jump";
        public const string Attack = "Fire1";
    }

    public class Animation
    {
        public const string Dead = "Dead";
        public const string FlyDead = "FlyDead";
        public const string Attack = "Attack";
        public const string Restart = "Restart";
    }
}